@@ -24,7 +24,7 @@
 {{ order.bill_city }}<br/>
 {{ order.bill_state }}<br/>
 {{ order.bill_postal_code }}<br/>
-{{ order.bill_country }}<br/>
+{{ order.bill_country_name|title }}<br/>
 
 {% if order.is_shippable %}
 <h4>{% trans "Shipping Address" %}</h4>
@@ -32,7 +32,7 @@
 {{ order.ship_city }}<br/>
 {{ order.ship_state }}<br/>
 {{ order.ship_postal_code }}<br/>
-{{ order.ship_country }}<br/>
+{{ order.ship_country_name|title }}<br/>
 
 <h4>{% trans "Shipping Method" %}</h4>
 {{ order.shipping_description }}<br/>
