@@ -43,6 +43,6 @@
 {{ order.ship_city }}<br/>
 {{ order.ship_state }}<br/>
 {{ order.ship_postal_code }}<br/>
-{{ order.ship_country }}<br/>
+{{ order.ship_country_name|title }}<br/>
 {% endif %}
 </div>
